Fix for too much spacing in checklists

--- a/prototype/_sass/libraries/patterns/components/_checklist.scss
+++ b/prototype/_sass/libraries/patterns/components/_checklist.scss
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 
 .pat-checklist {
+
+	> br {
+		display: none;
+	}
+		
 	label {
 		padding-left: 1.5em;
 		position: relative;
